@@ -1,4 +1,6 @@
 DIST gnome-python-2.22.3.tar.bz2 588459 RMD160 81772db78abe864dcbf3c89b7f864dd3b8ba41d3 SHA1 35eafe4f5ab9ee003a573dcf26699d3b03d52d5a SHA256 a1763ef40aa0fc152e1afe6be6b01d69ba305273bd4bd44cad018da42d1bb559
+DIST gnome-python-2.26.1.tar.bz2 523132 RMD160 054901ecd209953225ccfa725fdd9164447fbb49 SHA1 789627d4107aa50cd7fc763c4de015032346524e SHA256 ede0203f1eec22b3ed4a91c7b769e437859e5bc4b89a8f8e80b3f7ca62317098
 EBUILD gnome-python-base-2.22.3.ebuild 991 RMD160 e3f91cabd503dbd9ee492368850dfcdabc4d4601 SHA1 f78f2fe147b32b029543a60bcc3417b40061a72b SHA256 5106ff1854980b7eebc2995ce81d097d6af785b978044d455f904b11fec47121
-MISC ChangeLog 1812 RMD160 00dea5665fdbaa9127c5b1cd6305947a526c68b7 SHA1 994014dada29ebeadc826e3158398b49171c6f82 SHA256 499a737ea5cefa8278d640d71c6c3362c0c4ecd037601bedc5e2f6b4ce74ca1f
+EBUILD gnome-python-base-2.26.1.ebuild 987 RMD160 996ad7d959a5bf7d99c63460211260f3326e3095 SHA1 979248b2a4b78beed99dd89f74108e99f0dc479a SHA256 da9617dcef8d8b57ea28b55185c45a606225bf1410e5ec944f3696d229d24a4d
+MISC ChangeLog 2028 RMD160 91c9a3e0d241705ed4c14c5ba4f06202a4113e35 SHA1 5d6172a51bb6dc2754e560ad8736b6e9924485f5 SHA256 c62c9246838c3a85308a0e71590b85c90fc5cffbecb65bd167d6a570384e9884
 MISC metadata.xml 178 RMD160 ec0937689a645defb2b870b481c4d4db57a0fa73 SHA1 aa77d904544ca6e6e684658ec652463fdb2ca58d SHA256 ccdf4a821074a281d4fd442460b65f57e77546cea36756c435db5529d22fa2a6
